--- a/market-sectors.html
+++ b/market-sectors.html
@@ -532,12 +532,11 @@ contact@americanethane.com.cn
 		<div class="container-fluid">
 			<div class="row">
 
-<section class="wpb-content-wrapper"><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="mf-empty-space " style=""><div class="mf_empty_space_lg"  style="height: 40px"></div><div class="mf_empty_space_md"  style="height: 20px"></div><div class="mf_empty_space_xs"  style="height: 20px"></div></div><h2 style="color: #d9a300;text-align: center;font-family:Abril Fatface;font-weight:400;font-style:normal" class="vc_custom_heading" >Introduction</h2><div class="mf-empty-space " style=""><div class="mf_empty_space_lg"  style="height: 40px"></div><div class="mf_empty_space_md"  style="height: 20px"></div><div class="mf_empty_space_xs"  style="height: 20px"></div></div></div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper">
+<section class="wpb-content-wrapper"><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="mf-empty-space " style=""><div class="mf_empty_space_lg"  style="height: 40px"></div><div class="mf_empty_space_md"  style="height: 20px"></div><div class="mf_empty_space_xs"  style="height: 20px"></div></div><h2 style="color: #d9a300;text-align: center;font-family:Abril Fatface;font-weight:400;font-style:normal" class="vc_custom_heading" >介绍</h2><div class="mf-empty-space " style=""><div class="mf_empty_space_lg"  style="height: 40px"></div><div class="mf_empty_space_md"  style="height: 20px"></div><div class="mf_empty_space_xs"  style="height: 20px"></div></div></div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p>Shale revolution in the USA increased production of oil, gas and Natural Gas Liquids (NGL). The higher content of NGLs in both gas and oil wells make them abundant and lead to oversupply.</p>
-<p>This is especially true for ethane, which does not have enough demand internally in the USA from existing crackers and has been therefore left in the natural gas stream and burned for power since 2013. Some months in 2014 and 2015 ethane gas was even cheaper than methane gas due to oversupply.</p>
-
+			<p>美国的页岩革命提高了石油、天然气和天然气液体（NGL）的产量。由于石油和天然气井中NGL含量较高，使它们变得丰富并导致供应过剩。</p>
+			<p>对于乙烷来说，这一点尤为明显，因为美国国内现有的裂解装置对乙烷的需求不足。自2013年以来，乙烷一直留在天然气流中并用于发电。在2014年和2015年的某些月份，由于供应过剩，乙烷甚至比甲烷气便宜。</p>
 		</div>
 	</div>
 </div></div></div><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper">
@@ -557,20 +556,18 @@ contact@americanethane.com.cn
 </div></div></div><div data-vc-parallax="1.5" class="wpb_column vc_column_container vc_col-sm-6 vc_col-has-fill vc_general vc_parallax vc_parallax-content-moving"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p>Such oversupply and low prices attracted new wave of ethane cracking projects in the US gulf Coast and created opportunities for ethane to be exported internationally. First ethane terminals oriented for export to Europe and Asia appeared in 2015-2016.<br />
-According to independent consulting and research companies, ethane supply will grow to 3.3 million barrels per day (equivalent of 67 mmtpa) by 2023. The graph shows that rejection will continue 5 years from now even with all new crackers and existing export facilities are fully operational. Such oversupply shows that new ethane export facilities are much needed.</p>
-<p><span style="font-size: 10pt;"><strong><em>Figure 1.8.5. U.S. Ethane Supply and Demand. Source: RBN Energy (February 2018)</em></strong></span></p>
-
+			<p>这种供应过剩和低价格吸引了美国墨西哥湾沿岸新一波的乙烷裂解项目，并为乙烷的国际出口创造了机会。第一个面向欧洲和亚洲出口的乙烷终端于2015-2016年出现。<br />
+				根据独立咨询和研究公司的数据，到2023年，乙烷供应将增长到每天330万桶（相当于67百万吨每年）。图表显示，在新的裂解装置和现有出口设施完全投入运营的情况下，拒收现象仍将持续5年。这种供应过剩表明，有迫切需要新的乙烷出口设施。</p>
+				<p><span style="font-size: 10pt;"><strong><em>图1.8.5. 美国乙烷供应与需求。来源：RBN Energy（2018年2月）</em></strong></span></p>
 		</div>
 	</div>
 </div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="mf-empty-space " style=""><div class="mf_empty_space_lg"  style="height: 80px"></div><div class="mf_empty_space_md"  style="height: 20px"></div><div class="mf_empty_space_xs"  style="height: 20px"></div></div></div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p>petrockemical industry to produce ethylene and other olefins. The abundance of ethane in mid 2010s created new market for ethane – power generation – where ethane can compete with HFO and LNG in price and emissions.</p>
-<p>Since 2015 ethane has been a proven fuel for marine engines and has been used successfully in ethane ships voyaging from USA to Europe.</p>
-<p>Some countries in south-east Asia can benefit from ethane injection to natural gas network to increase Btu content. In such cases ethane is more economical than propane.</p>
-<p><span style="font-size: 10pt;"><strong><em>Hereby we see that abundance of ethane from US Shale Revolution expanded the use of ethane to benefit customers in various sectors of global economy.</em></strong></span></p>
-
+			<p>石化工业用于生产乙烯和其他烯烃。在2010年代中期，乙烷的丰富使得乙烷开拓了新的市场——发电——在这里，乙烷可以在价格和排放方面与重油（HFO）和液化天然气（LNG）竞争。</p>
+			<p>自2015年以来，乙烷已被证明是适用于船舶发动机的燃料，并已成功用于从美国驶往欧洲的乙烷船。</p>
+			<p>东南亚的一些国家可以通过向天然气网络注入乙烷来提高Btu含量。在这种情况下，乙烷比丙烷更经济。</p>
+			<p><span style="font-size: 10pt;"><strong><em>因此，我们可以看到，美国页岩革命带来的乙烷丰富使得乙烷的使用扩大，使全球经济各个领域的客户受益。</em></strong></span></p>
 		</div>
 	</div>
 </div></div></div><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper">
@@ -591,30 +588,26 @@ According to independent consulting and research companies, ethane supply will g
 </div></div></div><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p><strong> </strong></p>
-<p>Due to variety of applications, Ethylene is the biggest olefin by volume produced in the world. Demand and therefore production of ethylene is growing, majorly in China and other fast developing nations.</p>
-<p>The graph below demonstrates that ethane will be the fastest growing feedstock for ethylene production and will exceed naphtha by year 2030.</p>
-<p><span style="font-size: 10pt;"><em>Recently, ethane as part of NGLs was available in USA and Middle East. Today it gives big price advantage to ethylene producers in these regions.</em></span></p>
-
-		</div>
+			<p><strong> </strong></p>
+			<p>由于应用范围广泛，乙烯是世界上按体积生产的最大烯烃。乙烯的需求以及因此产生的乙烯产量正在增长，主要在中国和其他快速发展的国家。</p>
+			<p>下面的图表显示，乙烷将成为乙烯生产最快增长的原料，并将在2030年超过石脑油。</p>
+			<p><span style="font-size: 10pt;"><em>最近，乙烷作为NGLs的一部分在美国和中东地区有供应。如今，这为这些地区的乙烯生产商带来了巨大的价格优势。</em></span></p>
 	</div>
 </div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="mf-empty-space " style=""><div class="mf_empty_space_lg"  style="height: 60px"></div><div class="mf_empty_space_md"  style="height: 20px"></div><div class="mf_empty_space_xs"  style="height: 20px"></div></div></div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p>Due to variety of applications, Ethylene is the biggest olefin by volume produced in the world. Demand and therefore production of ethylene is growing, majorly in China and other fast developing nations.<br />
-The graph below demonstrates that ethane will be the fastest growing feedstock for ethylene production and will exceed naphtha by year 2030.</p>
-<p>Recently, ethane as part of NGLs was available in USA and Middle East. Today it gives big price advantage to ethylene producers in these regions.</p>
-<p>In addition to its price and infrastructure cost advantages, ethane generates substantially higher yields than other feedstock sources when producing ethylene.</p>
-<p>Currently China imports over 18 mmtpa of ethylene and polyethylene from middle east and North East Asia. It creates big opportunities for the country to substitute import with own production of ethylene with new built ethane-to-ethylene crackers.</p>
-
+			<p>由于应用范围广泛，乙烯是世界上按体积生产的最大烯烃。乙烯的需求以及因此产生的乙烯产量正在增长，主要在中国和其他快速发展的国家。</p>
+			<p>下面的图表显示，乙烷将成为乙烯生产最快增长的原料，并将在2030年超过石脑油。</p>
+			<p><span style="font-size: 10pt;"><em>最近，乙烷作为NGLs的一部分在美国和中东地区有供应。如今，这为这些地区的乙烯生产商带来了巨大的价格优势。</em></span></p>
+			<p>除了价格和基础设施成本优势外，乙烷在生产乙烯时产量明显高于其他原料来源。</p>
+			<p>目前，中国从中东和东北亚地区进口超过1800万吨的乙烯和聚乙烯。这为国家用新建的乙烷至乙烯裂解装置替代进口乙烯创造了巨大的机遇。</p>
 		</div>
 	</div>
 </div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="mf-empty-space " style=""><div class="mf_empty_space_lg"  style="height: 60px"></div><div class="mf_empty_space_md"  style="height: 20px"></div><div class="mf_empty_space_xs"  style="height: 20px"></div></div></div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p>American Ethane Company opened an office in Shanghai in 2015 and was the first company to introduce ethane advantages to Chinese customers and ignited an interest in new greenfield ethane-to-ethylene crackers with the highest yield guaranteed by US technology licensors.</p>
-<p>In late 2017-2018 AEC has signed three binding SPAs with Chinese customers for total volume of 7.2 mmtpa of ethane per annum.</p>
-
+			<p>美国乙烷公司（American Ethane Company）于2015年在上海设立了办事处，是第一家向中国客户介绍乙烷优势的公司，并激发了对美国技术许可方保证的最高产量的新建乙烷制乙烯裂解装置的兴趣。</p>
+			<p>在2017年底至2018年期间，AEC与中国客户签署了三份具有约束力的SPA，每年总共提供720万吨的乙烷。</p>
 		</div>
 	</div>
 </div></div></div><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper">
@@ -634,20 +627,19 @@ The graph below demonstrates that ethane will be the fastest growing feedstock f
 </div></div></div><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p>Due to a higher boiling point liquefied ethane gas (LEG) is easier and cheaper to liquefy than liquid methane (LNG).</p>
-<p>The energy content of ethane makes it cheaper to transport than the same energy content of methane.<br />
-Other infrastructure costs, e.g. regasification, are also considerably cheaper to build and operate.<br />
-Ethane offers lower CO2 emissions than fuel oils, distillates and coal</p>
+			<p>由于沸点较高，液化乙烷气（LEG）比液化甲烷（LNG）更容易且更便宜地进行液化。</p>
+			<p>乙烷的能量含量使其比同等能量含量的甲烷更便宜地进行运输。<br />
+			其他基础设施成本，如再气化，建设和运营成本也相对较低。<br />
+			乙烷的二氧化碳排放量低于燃料油、馏分油和煤。</p>
 
 		</div>
 	</div>
 </div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="mf-empty-space " style=""><div class="mf_empty_space_lg"  style="height: 60px"></div><div class="mf_empty_space_md"  style="height: 20px"></div><div class="mf_empty_space_xs"  style="height: 20px"></div></div></div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p>Historically, LNG prices have been linked to crude oil price, including Asia-Pacific hubs like Qatar, Australia, Africa and wider Asia, as these markets produce gas themselves and control the cost of production.</p>
-<p>In the USA natural gas is traded daily using the Henry Hub Index. New LNG export projects buy gas based on this index  and add the fixed cost of liquefaction, storage and loading.</p>
-<p>LEG from the USA offered by AEC has similar price structure while using a different index called Mont Belvieu Ethane (OPIS). LEG = Index Mont Belvieu (variable) + Liquefaction and Shipping (fixed).</p>
-
+			<p>历史上，LNG价格一直与原油价格挂钩，包括亚太地区的卡塔尔、澳大利亚、非洲和更广泛的亚洲地区，因为这些市场自己生产天然气并控制生产成本。</p>
+			<p>在美国，天然气每天按照亨利集散地指数进行交易。新的LNG出口项目根据这一指数购买天然气，并加上固定的液化、储存和装载成本。</p>
+			<p>AEC提供的来自美国的LEG具有类似的价格结构，但使用的是名为Mont Belvieu Ethane（OPIS）的不同指数。LEG = Mont Belvieu指数（可变）+ 液化和运输（固定）。</p>
 		</div>
 	</div>
 </div></div></div><div class="wpb_column vc_column_container vc_col-sm-6"><div class="vc_column-inner"><div class="wpb_wrapper">
@@ -660,9 +652,8 @@ Ethane offers lower CO2 emissions than fuel oils, distillates and coal</p>
 </div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="mf-empty-space " style=""><div class="mf_empty_space_lg"  style="height: 20px"></div><div class="mf_empty_space_md"  style="height: 10px"></div><div class="mf_empty_space_xs"  style="height: 10px"></div></div></div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper">
 	<div class="wpb_text_column wpb_content_element " >
 		<div class="wpb_wrapper">
-			<p>Fixed part is about 2/3 of the total price, which make such price more stable and predictable on the 20-year horizon. As LNG over the next decade will come mainly from two countries USA and Australia, and with 2/3 of the price of LEG (US) fixed for 20 years, LEG (US) pricing offers more stability and less volatility that is important for base-load power generation.<br />
-Since 2015 AEC has been developing a 2400MW power project in Bangladesh with General Electric’s most efficient 9HA Gas Turbine. Coupled with GE’s HRSG and steam turbines, the power plant will be able to guarantee 60% + fuel efficiency at full load. The project is specifically designed as a dual-fuel so it can burn 100% ethane and ethane-methane blends without shutting down the operations.</p>
-
+			<p>固定部分约占总价格的2/3，这使得这种价格在20年的时间范围内更加稳定和可预测。由于未来十年LNG主要来自美国和澳大利亚两个国家，且LEG（美国）价格的2/3在20年内固定，LEG（美国）的定价提供了更高的稳定性和较低的波动性，这对基本负荷发电非常重要。<br />
+				自2015年以来，AEC一直在与通用电气公司的最高效9HA燃气轮机共同开发孟加拉国的2400兆瓦电力项目。与GE的HRSG和蒸汽涡轮机相结合，该发电厂将能够在满负荷下保证60%以上的燃料效率。该项目专门设计为双燃料，因此可以在不关闭运行的情况下燃烧100%的乙烷和乙烷-甲烷混合物。</p>
 		</div>
 	</div>
 </div></div></div></div></div></div><div class="vc_row wpb_row vc_row-fluid"><div class="container"><div class="row"><div class="wpb_column vc_column_container vc_col-sm-12"><div class="vc_column-inner"><div class="wpb_wrapper"><div class="mf-empty-space " style=""><div class="mf_empty_space_lg"  style="height: 100px"></div><div class="mf_empty_space_md"  style="height: 20px"></div><div class="mf_empty_space_xs"  style="height: 20px"></div></div></div></div></div></div></div></div>
@@ -705,7 +696,8 @@ Since 2015 AEC has been developing a 2400MW power project in Bangladesh with Gen
 <div class="detail phone">
 	<i class="flaticon-tool"></i>
 	<div>
-		<span>联系我们:</span> +1-713-223-2323
+		<span>联系我们:</span> (+86)-21-61837588, (+86)-21-61837599
+
 	</div>
 </div>
 
