--- a/what-is-ethane.html
+++ b/what-is-ethane.html
@@ -586,7 +586,8 @@ contact@americanethane.com.cn
 <div class="detail phone">
 	<i class="flaticon-tool"></i>
 	<div>
-		<span>联系我们:</span> +1-713-223-2323
+		<span>联系我们:</span> (+86)-21-61837588, (+86)-21-61837599
+
 	</div>
 </div>
 
